Document jtreesitter Java 22+ requirement and plan out-of-process LSP
All jtreesitter versions (0.24.x through 0.26.x) require Java 22+ due to
their use of the Foreign Function & Memory API. Since IntelliJ 2025.1
ships with JBR 21, tree-sitter integration cannot work in-process.

This commit documents the issue and outlines workarounds:

Java version compatibility:
- Update jtreesitter to 0.24.1 and tree-sitter-cli to 0.24.3 for ABI match
- Document that ALL jtreesitter versions require Java 22+ in libs.versions.toml
- Add dependency version documentation to lang/README.md
- Migrate XtcQueryEngine to 0.24.x API (language.query() factory method)

Out-of-process LSP server plan (PLAN_TREE_SITTER.md):
- Document recommended workaround: run LSP server with Java 25 (XDK toolchain)
- Detail automatic server management via LSP4IJ (no manual startup needed)
- Outline JRE bundling strategy for production deployment
- Note alternative: bonede/tree-sitter-ng (Java 8+ compatible)

Build improvements:
- Add Palantir git-version plugin for config-cache-safe git info
- Include CLI version in native library staleness hash computation
- Add adapter property as generateBuildInfo input for incremental builds
- Remove inline git ProcessBuilder code

IntelliJ plugin UX:
- Show notification balloon when LSP server starts with adapter name
- Add XTC Language Server notification group to plugin.xml

Testing:
- Add MANUAL_TEST_PLAN.md with feature matrix for Mock/TreeSitter/Compiler adapters